# MNIST-classification

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  download_mnist_data.sh  nn_config.py
src/: main1.cpp  main2.cpp  main3.cpp  mnist.cpp  mnist.h
